refactoring for AST/ST printers